# code_puppy

./: .coverage.air.pid43805.X0mmprux.Hh1vxeymdHCh  .coverage.air.pid43806.XDRnQpBx.HNiQ70mBz56h  .coverage.air.pid43807.XJEfDaqx.HNGWDB7Msy3h  .coverage.air.pid43808.X6QJRwBx.H1U9msX0lnxh  .coverage.air.pid43809.XJSgtQyx.HCr3QJwlPCch  .coverage.air.pid43810.XWrhhEHx.HI1q1jBw7pQh  .coverage.air.pid43811.XbMjLSwx.H2aU9f5TmCXh  .coverage.air.pid43812.XwAbB6Ox.HylydVpWP18h  .coverage.air.pid43813.XuA90bBx.H1lQe22ZkZ6h  .coverage.air.pid43814.XqzOVR7x.HTOIZ6xCUN3h  .credo.exs  .dialyzer_ignore.exs  .env.example  .formatter.exs  .gitignore  .pack_resume.md  AGENTS.md  ARCHITECTURE.md  BUGS_PERF_DESIGN_REVIEW.md  COMMIT_MSG.txt  CONFIG_PORT_SUMMARY.md  CONTRIBUTING.md  CRITICAL_FOLLOWUP.md  Cargo.toml  DEP_CONFIG_AUDIT.md  ELIXIR_MIGRATION_ROADMAP.md  FINAL_CODE_REVIEW_REPORT.md  FORK_CHANGELOG.md  MIGRATION_MAP.md  MIGRATION_STATUS.md  PERFORMANCE_REVIEW_2026-04-08.md  PERFORMANCE_REVIEW_2026-04-08_complete.md  PROTOCOL_COMPARISON_TABLE.md  PROTOCOL_DRIFT_ANALYSIS.md  PYTHON_QUALITY_REVIEW.md  PYTHON_REVIEW.md  README.md  ROADMAP.md  SECURITY_AUDIT.md  SECURITY_NOTES.md  (+36 more)
.bd/: issues.json  issues.json.backup.20260416_045114  issues.json.backup.corrupted  issues.json.broken-by-pack-leader  issues.json.tmp
.github/: RUST_ELIMINATION_NOTES.md
bench/: streaming_bench.exs
benchmarks/: bench_message_ops.py
code_puppy/: __init__.py  _backlog.py  _core_bridge.py  _edit_bridge.py  adaptive_rate_limiter.py  agent_model_pinning.py  agent_pinning_transport.py  app_runner.py  async_utils.py  callbacks.py  chatgpt_codex_client.py  circuit_state.py  claude_cache_client.py  cli_runner.py  code_context.py  concurrency_limits.py  config.py  config_paths.py  config_presets.py  console.py  constants.py  content_prep_bridge.py  dbos_utils.py  elixir_transport.py  elixir_transport_helpers.py  error_logging.py  errors.py  gemini_code_assist.py  gemini_model.py  http_utils.py  interactive_loop.py  message_transport.py  model_availability.py  model_config.py  model_factory.py  model_packs.py  model_switching.py  model_utils.py  models.json  models_dev_parser.py  (+38 more)
code_puppy_core/: .gitignore  Cargo.toml  THREAD_SAFETY_AUDIT.md  pyproject.toml
code_puppy_core/src/: content_prep.rs  fuzzy_match.rs  hashline.rs  lib.rs  line_numbers.rs  message_hashing.rs  path_classify.rs  pruning.rs  replace_engine.rs  serialization.rs  token_estimation.rs  types.rs  unified_diff.rs
code_puppy_core/src/path_classify/: mod.rs  patterns.rs  sensitive.rs  tests.rs
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: AGENT_SKILLS.md  ELIXIR_CLI_QUICKSTART.md  ELIXIR_REMEDIATION.md  LEFTHOOK.md  MIGRATION.md  PLUGIN_MIGRATION.md  THIN_SHELL_CONTRACT.md  TUI_CLI_AUDIT.md  acceleration.md  architecture.md  architecture.mmd  bandit-security-notes.md  benchmark_results_2026-04-14.md  code_explorer.md  codex-token-control-limitations.md  (+11 more)
elixir/code_puppy_control/native/turbo_parse_nif/: Cargo.toml
elixir/code_puppy_control/native/turbo_parse_nif/src/: lib.rs
rewrite/code_puppy-main-elixir-first-rewrite/elixir/code_puppy_control/native/turbo_parse_nif/: Cargo.toml
rewrite/code_puppy-main-elixir-first-rewrite/elixir/code_puppy_control/native/turbo_parse_nif/src/: lib.rs
rewrite/code_puppy-main-elixir-first-rewrite/turbo_parse/: CI.md  RUST_REVIEW.md  SECURITY_AUDIT.md  SECURITY_REVIEW.md  pyproject.toml
rewrite/code_puppy-main-elixir-first-rewrite/turbo_parse/benches/: BENCHMARKS.md  baseline.json
rewrite/code_puppy-main-elixir-first-rewrite/turbo_parse/benches/fixtures/: generate_js.py  generate_python.py  generate_rust.py
rewrite/code_puppy-main-elixir-first-rewrite/turbo_parse/benches/fixtures/python/: sample_10k.py  sample_1k.py
rewrite/code_puppy-main-elixir-first-rewrite/turbo_parse/benches/fixtures/rust/: sample_10k.rs  sample_1k.rs
rewrite/code_puppy-main-elixir-first-rewrite/turbo_parse/queries/: ATTRIBUTION
rewrite/code_puppy-main-elixir-first-rewrite/turbo_parse/queries/elixir/: highlights.scm  injections.scm
rewrite/code_puppy-main-elixir-first-rewrite/turbo_parse/queries/javascript/: folds.scm  highlights.scm
rewrite/code_puppy-main-elixir-first-rewrite/turbo_parse/queries/python/: folds.scm  injections.scm
rewrite/code_puppy-main-elixir-first-rewrite/turbo_parse/queries/rust/: folds.scm  highlights.scm
rewrite/code_puppy-main-elixir-first-rewrite/turbo_parse/queries/tsx/: folds.scm  highlights.scm
rewrite/code_puppy-main-elixir-first-rewrite/turbo_parse/queries/typescript/: folds.scm  highlights.scm
rewrite/code_puppy-main-elixir-first-rewrite/turbo_parse/src/: diagnostics.rs  folds.rs  injection.rs  queries.rs  registry.rs  stats.rs  symbols.rs
rewrite/code_puppy-main-elixir-first-rewrite/turbo_parse/tests/: test_dynamic_grammars.rs
turbo_ops/: .gitignore  Cargo.toml  README.md  THREAD_SAFETY_AUDIT.md  pyproject.toml
turbo_ops/src/: async_batch_executor.rs  batch_executor.rs  indexer.rs  lib.rs  models.rs  operations.rs
turbo_parse/: CI.md  Cargo.toml  DYNAMIC_GRAMMARS.md  README.md  SECURITY_CHECKLIST.md  THREAD_SAFETY_AUDIT.md  pyproject.toml
turbo_parse/benches/: check_regression.py  parse_bench.rs
turbo_parse/benches/fixtures/: generate_all.py  generate_js.py  generate_python.py  generate_rust.py
turbo_parse/benches/fixtures/javascript/: sample_100k.js  sample_10k.js  sample_1k.js
turbo_parse/benches/fixtures/python/: sample_100k.py  sample_10k.py  sample_1k.py
turbo_parse/benches/fixtures/rust/: sample_100k.rs
turbo_parse/examples/: spike.rs
turbo_parse/queries/: README.md
turbo_parse/queries/elixir/: folds.scm
turbo_parse/queries/python/: folds.scm  highlights.scm
turbo_parse/queries/rust/: folds.scm
turbo_parse/src/: batch.rs  cache.rs  diagnostics.rs  dynamic.rs  highlights.rs  incremental.rs  injection.rs  lib.rs  parser.rs  registry.rs  stats.rs  symbols.rs
turbo_parse/tests/: test_dynamic_grammars.rs
turbo_parse_core/: Cargo.toml
turbo_parse_core/src/: dynamic.rs  folds.rs  lib.rs  parser.rs  queries.rs  types.rs
(+3654 files in other folders)
