[workspace]
members = ["code_puppy_core", "turbo_ops", "turbo_parse"]
resolver = "2"

[workspace.dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "serde", "free-threaded"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
