[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codepp"
version = "0.0.445"
description = "Code generation agent"
readme = "README.md"
requires-python = ">=3.10,<3.15"
# Minimum version constraints. Exact versions are pinned in uv.lock.
# CI MUST use `uv sync --frozen` to enforce the lockfile.
# To update: `uv lock --upgrade-package <pkg>` then commit uv.lock.
dependencies = [
    "pydantic-ai-slim[openai,anthropic,mcp]==1.60.0",
    "typer>=0.24.1",
    "mcp>=1.26.0",
    "httpx[http2]>=0.28.1",
    "requests>=2.33.0",
    "rich>=14.3.3",
    "prompt_toolkit>=3.0.50",
    "textual>=8.2.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.3",
    "json-repair>=0.58.7",
    "pyfiglet>=1.0.4",
    "openai>=2.30.0",
    "ripgrep==15.0.0",
    "tenacity>=9.1.4",
    "playwright>=1.58.0",
    "dbos>=2.16.0",
    "fastapi>=0.135.2",
    "uvicorn[standard]>=0.42.0",
    "websockets>=16.0",
    "termflow-md>=0.1.9",
    "Pillow>=12.1.1",
    "anthropic==0.79.0",
    "msgpack>=1.0.0",
]
authors = [
    {name = "Michael Pfaffenberger"}
]
license = {text = "MIT"}
keywords = ["ai", "agent", "coding", "llm", "cli", "mcp", "terminal"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Code Generators",
    "Environment :: Console",
    "Intended Audience :: Developers",
]

[project.urls]
repository = "https://github.com/mpfaffenberger/code_puppy"
HomePage = "https://github.com/mpfaffenberger/code_puppy"


[project.scripts]
code-puppy = "code_puppy.main:main_entry"
pup = "code_puppy.main:main_entry"

[tool.logfire]
ignore_no_config = true

[tool.hatch.build]
packages = ["code_puppy"]

[tool.hatch.build.targets.wheel]
include = ["code_puppy/**"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"code_puppy/main.py" = ["E402"]
"code_puppy/cli_runner.py" = ["E402"]
"code_puppy/messaging/__init__.py" = ["E402"]

[tool.pytest.ini_options]
addopts = "--cov=code_puppy --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "eval: LLM evaluation test (skipped unless RUN_EVALS=1 is set)",
]

[tool.coverage.run]
omit = ["code_puppy/main.py"]

[tool.coverage.report]
fail_under = 65

[tool.uv]
python-preference = "only-managed"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.8",
    "pexpect>=4.9.0",
    "maturin>=1.12.6",
    "hypothesis>=6.150.0",
]
