[package]
name = "code_puppy_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "_code_puppy_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustc-hash = "2"
rmp-serde = "1"
xxhash-rust = { version = "0.8", features = ["xxh32"] }
