[package]
name = "code_puppy_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "_code_puppy_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rustc-hash = "2"
similar = "2"
rmp-serde = "1"
xxhash-rust = { version = "0.8", features = ["xxh32"] }
globset = "0.4"
dirs = "6"
memchr = "2"
