[package]
name = "turbo_ops"
version = "0.1.0"
edition = "2021"
authors = ["Code Puppy Team"]
description = "High-performance batch file operations with PyO3 bindings"
license = "MIT"

[lib]
name = "turbo_ops"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = "1.10"
walkdir = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
ignore = "0.4"

[dev-dependencies]
tempfile = "3"
