[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "turbo-ops"
version = "0.1.0"
description = "High-performance batch file operations with PyO3 bindings"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

[tool.maturin]
features = ["pyo3/extension-module"]
python-packages = ["turbo_ops"]
