[package]
name = "turbo_parse"
version = "0.1.0"
edition = "2021"
authors = ["Code Puppy Team"]
description = "High-performance parsing with tree-sitter and PyO3 bindings"
license = "MIT"

[features]
default = ["python"]
python = ["dep:pyo3"]
dynamic-grammars = ["dep:libloading"]

[lib]
name = "turbo_parse"
crate-type = ["cdylib", "rlib"]

[[example]]
name = "spike"
path = "examples/spike.rs"

# Benchmarks
[[bench]]
name = "parse_bench"
harness = false
required-features = []

# Don't enable python feature for benchmarks
[profile.bench]
inherits = "release"

[dependencies]
pyo3 = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-elixir = "0.3"
# Cache dependencies
lru = "0.16"
parking_lot = "0.12"
sha2 = "0.10"
# Parallelism
rayon = "1.10"
streaming-iterator = "0.1"
# Dynamic grammar loading (optional)
libloading = { version = "0.8", optional = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
