[package]
name = "turbo_parse"
version = "0.1.0"
edition = "2021"
authors = ["Code Puppy Team"]
description = "High-performance parsing with tree-sitter and PyO3 bindings"
license = "MIT"

[features]
default = ["python"]
python = ["dep:pyo3"]
dynamic-grammars = ["turbo_parse_core/dynamic-grammars"]

[lib]
name = "turbo_parse"
crate-type = ["cdylib", "rlib"]

[[example]]
name = "spike"
path = "examples/spike.rs"

# Benchmarks
[[bench]]
name = "parse_bench"
harness = false
required-features = []

[dependencies]
turbo_parse_core = { path = "../turbo_parse_core" }
pyo3 = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tree-sitter = "0.24"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
