[package]
name = "turbo_parse_core"
version = "0.1.0"
edition = "2021"
authors = ["Code Puppy Team"]
description = "Core parsing logic for tree-sitter - pure Rust, no bindings"
license = "MIT"

[features]
default = []
dynamic-grammars = ["dep:libloading"]

[lib]
name = "turbo_parse_core"
crate-type = ["rlib"]

[dependencies]
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-elixir = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
once_cell = "1.20"
regex = "1.11"
parking_lot = "0.12"
# Parallelism
rayon = "1.10"
streaming-iterator = "0.1"
# Cache dependencies
lru = "0.16"
sha2 = "0.10"
# Dynamic grammar loading (optional)
libloading = { version = "0.8", optional = true }

[dev-dependencies]
tempfile = "3"
