[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "turbo-parse"
version = "0.1.0"
description = "High-performance parsing with tree-sitter and PyO3 bindings"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

[tool.maturin]
features = ["pyo3/extension-module"]
python-packages = ["turbo_parse"]
# Supports both regular and free-threaded Python builds
# Rust code uses cfg_attr to adapt gil_used at compile time
