[package]
name = "turbo_parse_nif"
version = "0.1.0"
edition = "2021"

[lib]
name = "turbo_parse_nif"
crate-type = ["cdylib"]

# Exclude from workspace to avoid conflicts with parent project
[workspace]

[dependencies]
rustler = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Link to the existing turbo_parse crate
# Note: We use default-features (python) because the crate has PyO3 code
# that's not feature-gated. In Stage 2, we'll refactor to remove this dependency.
turbo_parse = { path = "../../../../turbo_parse" }
