[package]
name = "turbo_parse_nif"
version = "0.1.0"
edition = "2021"

[lib]
name = "turbo_parse_nif"
crate-type = ["cdylib"]

# Exclude from workspace to avoid conflicts with parent project
[workspace]

[dependencies]
rustler = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Link to the core parsing crate - NO PyO3!
turbo_parse_core = { path = "../../../../turbo_parse_core" }
